--- a/SistemaWebVuelos/Views/Vuelo/Delete.cshtml
+++ b/SistemaWebVuelos/Views/Vuelo/Delete.cshtml
@@ -24,24 +24,24 @@
 
         </div>*@
 
-    <div id="display-label">
-        <p><b>@Html.DisplayNameFor(model => model.Id):</b> @Html.DisplayFor(model => model.Id)</p>
+
+    <div class="display">
+        <p> <b>@Html.DisplayNameFor(model => model.Id):</b> @Html.DisplayFor(model => model.Id)</p>
     </div>
 
-
-    <div class="display-label">
+    <div class="display">
         <p> <b>@Html.DisplayNameFor(model => model.Fecha):</b> @Html.DisplayFor(model => model.Fecha)</p>
     </div>
 
-    <div class="display-label">
+    <div class="display">
         <p> <b>@Html.DisplayNameFor(model => model.Destino):</b> @Html.DisplayFor(model => model.Destino)</p>
     </div>
 
-    <div class="display-label">
+    <div class="display">
         <p> <b>@Html.DisplayNameFor(model => model.Origen):</b> @Html.DisplayFor(model => model.Origen)</p>
     </div>
 
-    <div class="display-label">
+    <div class="display">
         <p> <b> @Html.DisplayNameFor(model => model.Matricula):</b> @Html.DisplayFor(model => model.Matricula)</p>
     </div>
 </fieldset>
