--- a/SistemaWebVuelos/Views/Vuelo/Detail.cshtml
+++ b/SistemaWebVuelos/Views/Vuelo/Detail.cshtml
@@ -8,7 +8,7 @@
 <body>
     <fieldset>
         <legend>Vuelo Detail</legend>
-        <div class="display-label">
+        <div class="display">
             <p><b>@Html.DisplayNameFor(model => model.Id):</b> @Html.DisplayFor(model => model.Id)</p>
 </div>   
         
